# rmx

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
benches/: cli.rs
src/: arg.rs  core.rs  dir.rs  error.rs  file.rs  interact.rs  link.rs  main.rs  shred.rs  traverse.rs
tests/: cli.rs  dir.rs  features.rs  file.rs  flags.rs  links.rs  shred.rs
