[package]
name = "rmd"
authors = ["Fabricio <demfabris@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "GNU 'rm' drop in replacement with trashbin features"
keywords = ["gnu", "remove", "trash"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.12", features = ["cargo"] }
dialoguer = "0.10.1"
thiserror = "1.0.31"

[features]
no-interactive = []

[target.'cfg(unix)'.dependencies]
libc = "0.2.126"

[dev-dependencies]
assert_fs = "1.0.7"
assert_cmd = "2.0.4"
predicates = "2.1.1"
escargot = "0.5.7"
