[package]
name = "rmx"
authors = ["Fabricio <demfabris@gmail.com>"]
categories = ["command-line-utilities, filesystem"]
repository = "https://github.com/demfabris/rmx"
license = "MIT OR Apache-2.0"
description = "Faster GNU 'rm' drop in replacement with extra features"
keywords = ["gnu", "remove", "trash"]
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["cargo"] }
dialoguer = "0.10.2"
thiserror = "1.0.37"
jwalk = "0.6.0"
trash = "2.1.5"

[features]
auto-interactive = []

[target.'cfg(unix)'.dependencies]
libc = "0.2.134"

[dev-dependencies]
assert_fs = "1.0.7"
assert_cmd = "2.0.4"
predicates = "2.1.1"
escargot = "0.5.7"
criterion = "0.4.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
strip = true

[profile.bench]
lto = true
codegen-units = 1
opt-level = "s"
strip = true

[[bench]]
name = "cli"
harness = false
